@@ -18,6 +18,10 @@
 
 	<LI>HTMLDOC could crash when checking if a URL is already cached.
 
+	<LI>HTMLDOC didn't adjust the top margin when changing
+	the page header if the comment didn't appear at the top
+	of a page.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.21</H2>
