@@ -1,4 +1,4 @@
-CHANGES.txt - 08/19/2002
+CHANGES.txt - 08/20/2002
 ------------------------
 
 CHANGES IN HTMLDOC v1.8.22
@@ -11,6 +11,9 @@ CHANGES IN HTMLDOC v1.8.22
 
 	- HTMLDOC could crash when checking if a URL is already
 	  cached.
+	- HTMLDOC didn't adjust the top margin when changing the
+	  page header if the comment didn't appear at the top of
+	  a page.
 
 
 CHANGES IN HTMLDOC v1.8.21
